--- a/Image_analysis.ipynb
+++ b/Image_analysis.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +20,173 @@
     "import cv2 as cv\n",
     "import matplotlib.pyplot as plt\n",
     "import napari\n",
-    "import sys\n",
-    "import os"
+    "import os\n",
+    "import pandas as pd\n",
+    "import xlsxwriter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Classes and functions\n",
+    "\n",
+    "class RootAnalysis():\n",
+    "    '''\n",
+    "    Object for quantifying the amount of lignin polymers in Arabidopsis seedlings\n",
+    "    methods: read, to_gray, crop_img, calc_thresh, bin_img, smoothen, calc_intensity, save_img\n",
+    "    '''\n",
+    "    def __init__(self, file):\n",
+    "        self.f = file\n",
+    "    \n",
+    "    def read(self):\n",
+    "        # Read image\n",
+    "        img = cv.imread(self.f)\n",
+    "        return img\n",
+    "    \n",
+    "    def to_gray(self, img):\n",
+    "        # Convert image to grayscale\n",
+    "        img_gray = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n",
+    "        return img_gray\n",
+    "    \n",
+    "    def crop_img(self, img, n=255):\n",
+    "        # Create copy of image\n",
+    "        img_cp = img.copy()\n",
+    "        # Set first and last 255 rows to white\n",
+    "        img_cp[:225] = n\n",
+    "        img_cp[-225:] = n\n",
+    "        return img_cp\n",
+    "    \n",
+    "    def calc_thresh(self, img, n=255):\n",
+    "        # Calculate 10%-quantile\n",
+    "        q_10 = np.quantile(img[n+1:-(n+1),:],0.10)\n",
+    "        # Calculate threshold as mean pixel intensity over 10%-quantile\n",
+    "        # Adjust by some constant, e.g., c=2\n",
+    "        th = np.average(img[img <= q_10]) - 2\n",
+    "        return th\n",
+    "    \n",
+    "    def bin_img(self, img, th):\n",
+    "        # Binarize image by means of thresholding\n",
+    "        _, bin_img = cv.threshold(img,th,255,cv.THRESH_BINARY)\n",
+    "        return bin_img\n",
+    "    \n",
+    "    def smoothen(self, img):\n",
+    "        # Smoothen boundaries in binarised image by means of morphological opening\n",
+    "        kernel = cv.getStructuringElement(cv.MORPH_ELLIPSE,(2,2))\n",
+    "        sm_img = cv.morphologyEx(img, cv.MORPH_OPEN, kernel)\n",
+    "        return sm_img\n",
+    "    \n",
+    "    def calc_intensity(self, bin_img, img, n=225):\n",
+    "        # Create copy of binarized image and convert to boolean\n",
+    "        bool_img = bin_img.copy()\n",
+    "        bool_img[bool_img == 0] = True\n",
+    "        bool_img[bool_img == 255] = False\n",
+    "        bool_img = bool_img.astype('bool')\n",
+    "\n",
+    "        # image dimensions, i.e., h x w pixels\n",
+    "        h, w = img.shape\n",
+    "        # area of whole image\n",
+    "        area = h*w\n",
+    "        # area of cropped region\n",
+    "        area_cp = (h-2*n)*w\n",
+    "        # area of stained region\n",
+    "        area_st = np.sum(bool_img)\n",
+    "\n",
+    "        # grayscale intensity normalized over stained region\n",
+    "        int1 = np.sum(img[bool_img])/area_st\n",
+    "        # grayscale intensity normalized over cropped region\n",
+    "        int2 = np.sum(img[bool_img])/area_cp\n",
+    "        # grayscale intensity normalized over whole image\n",
+    "        int3 = np.sum(img[bool_img])/area\n",
+    "\n",
+    "        # print(f\"Grayscale intensity normalized over stained region: {int1}\")\n",
+    "        # print(f\"Grayscale intensity normalized over cropped region: {int2}\")\n",
+    "        # print(f\"Grayscale intensity normalized over whole image: {int3}\")\n",
+    "        return np.array([area_cp, area_st]), np.array([int1, int2, int3])\n",
+    "    \n",
+    "    def save_img(self, img, name):\n",
+    "        txt = self.f.split('.')\n",
+    "        cv.imwrite(f\"{txt[0]}_{name}.tif\", img)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grayscale intensity normalized over stained region: 114.23573452043706\n",
+      "Grayscale intensity normalized over cropped region: 3.4674294909591197\n",
+      "Grayscale intensity normalized over whole image: 1.4357325236002605\n",
+      "   grayscale intensity stained region  grayscale intensity cropped region  \\\n",
+      "0                          114.235735                            3.467429   \n",
+      "\n",
+      "   grayscale whole image  area stained region  area cropped region  \n",
+      "0               1.435733             325632.0               9884.0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# path\n",
+    "f = 'images/root_images/root0004.tif'\n",
+    "\n",
+    "# create instance for image analysis\n",
+    "object = RootAnalysis(f)\n",
+    "\n",
+    "# read image\n",
+    "img = object.read()\n",
+    "\n",
+    "# convert image to grayscale\n",
+    "gray_img = object.to_gray(img)\n",
+    "\n",
+    "# crop image\n",
+    "cropped_img = object.crop_img(gray_img)\n",
+    "\n",
+    "# save cropped image\n",
+    "# object.save_img(cropped_img, 'cropped')\n",
+    "\n",
+    "# calculate threshold\n",
+    "th = object.calc_thresh(gray_img)\n",
+    "# Define constant threshold instead\n",
+    "# th = 140\n",
+    "\n",
+    "# binarize image\n",
+    "bin_img = object.bin_img(cropped_img, th)\n",
+    "\n",
+    "# smoothen boundaries in binarized image\n",
+    "final_img = object.smoothen(bin_img)\n",
+    "\n",
+    "# # save binarized image\n",
+    "# object.save_img(final_img, 'binarized')\n",
+    "\n",
+    "# compute area of cropped and stained region\n",
+    "# compute grayscale intensities normalized over stained region, cropped region, whole image\n",
+    "area, intensity = object.calc_intensity(final_img, gray_img)\n",
+    "\n",
+    "# create dataframe\n",
+    "data = {'grayscale intensity stained region':[], 'grayscale intensity cropped region':[], 'grayscale whole image':[], 'area stained region':[], 'area cropped region':[]}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# insert values\n",
+    "new_row = np.concatenate((intensity, area))\n",
+    "df.loc[len(df)] = new_row\n",
+    "\n",
+    "# export to excel\n",
+    "df.to_excel(\"output.xlsx\") \n",
+    "\n",
+    "# # visualize original and processed images with napari\n",
+    "# viewer = napari.Viewer()\n",
+    "# viewer.add_image(img, rgb=True, name='Original image')\n",
+    "# viewer.add_image(gray_img, name='Grayscale image')\n",
+    "# viewer.add_image(cropped_img, name='Cropped image')\n",
+    "# viewer.add_image(bin_img, name='Binarized image')\n",
+    "# viewer.add_image(final_img, name='Binarized image w/ smoothened boundaries')"
    ]
   },
   {
@@ -30,303 +195,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Classes and functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "images/root_images\\root0001.tif\n",
-      "images/root_images\\root0002.tif\n",
-      "images/root_images\\root0003.tif\n",
-      "images/root_images\\root0004.tif\n",
-      "images/root_images\\root0005.tif\n",
-      "images/root_images\\root0006.tif\n",
-      "images/root_images\\root0007.tif\n",
-      "images/root_images\\root0008.tif\n",
-      "images/root_images\\root0009.tif\n",
-      "images/root_images\\root0010.tif\n"
-     ]
-    }
-   ],
-   "source": [
+    "# create dataframe\n",
+    "data = {'grayscale intensity stained region':[], 'grayscale intensity cropped region':[], 'grayscale whole image':[], 'area stained region':[], 'area cropped region':[]}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
     "# assign directory\n",
     "directory = 'images/root_images'\n",
     " \n",
     "# iterate over files in directory\n",
     "for filename in os.listdir(directory):\n",
+    "    # path\n",
     "    f = os.path.join(directory, filename)\n",
-    "    # checking if it is a file\n",
-    "    if os.path.isfile(f):\n",
-    "        print(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Image layer 'Grayscale Image' at 0x29fc80351b0>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Read image\n",
-    "img = cv.imread(\"images/root_images/root0004.tif\")\n",
-    "img_gray = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n",
     "\n",
-    "# Visualize images using napari (will open in a separate window)\n",
-    "# Create an empty viewer\n",
-    "viewer = napari.Viewer()\n",
-    "# Add images as layers\n",
-    "viewer.add_image(img, rgb=True, name='Original Image')\n",
-    "viewer.add_image(img_gray, name='Grayscale Image')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[x, y] = img_gray.shape\n",
-    "max_row = np.zeros(x)\n",
-    "min_row = np.zeros(x)\n",
-    "boolean = np.full(x, False)\n",
+    "    # create instance for image analysis\n",
+    "    object = RootAnalysis(f)\n",
     "\n",
-    "for i in range(x):\n",
-    "    max_row[i] = np.max(img_gray[i,:])\n",
-    "    min_row[i] = np.min(img_gray[i,:])\n",
-    "    boolean[i] = max_row[i]-min_row[i]>=50"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "boolean_cp = boolean.copy()\n",
+    "    # read image\n",
+    "    img = object.read()\n",
     "\n",
-    "boolean_cp[:99] = False\n",
-    "boolean_cp[-99:] = False\n",
+    "    # convert image to grayscale\n",
+    "    gray_img = object.to_gray(img)\n",
     "\n",
-    "for i in range(100,x-100):\n",
-    "    if not(boolean_cp[i] == True and sum(boolean_cp[i-10:i+10])>=10):\n",
-    "        boolean_cp[i] = False\n",
+    "    # crop image\n",
+    "    cropped_img = object.crop_img(gray_img)\n",
     "\n",
-    "idx_upper = np.where(boolean_cp == True)[0][0] - 50\n",
-    "idx_lower = np.where(boolean_cp == True)[0][-1] + 50"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Image layer 'Cropped Image' at 0x29fc881ba60>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Crop region of interest\n",
-    "img_gray_cp = img_gray.copy()\n",
-    "# img_gray_cp[:idx_upper,:] = 255\n",
-    "# img_gray_cp[idx_lower:,:] = 255\n",
+    "    # save cropped image\n",
+    "    # object.save_img(cropped_img, 'cropped')\n",
     "\n",
-    "img_gray_cp[:225] = 255\n",
-    "img_gray_cp[-225:] = 255\n",
+    "    # calculate threshold\n",
+    "    th = object.calc_thresh(gray_img)\n",
+    "    # Define constant global threshold instead\n",
+    "    # th = 140\n",
     "\n",
-    "viewer.add_image(img_gray_cp, name='Cropped Image')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Global thresholding\n",
-    "_, thresh1 = cv.threshold(img_gray_cp,100,255,cv.THRESH_BINARY)\n",
-    "_, thresh2 = cv.threshold(img_gray_cp,125,255,cv.THRESH_BINARY)\n",
-    "_, thresh3 = cv.threshold(img_gray_cp,150,255,cv.THRESH_BINARY)\n",
+    "    # binarize image\n",
+    "    bin_img = object.bin_img(cropped_img, th)\n",
     "\n",
-    "titles = ['Global Thresh @100','Global Thresh @125','Global Thresh @150']\n",
-    "images = [thresh1, thresh2, thresh3]\n",
+    "    # smoothen boundaries in binarized image\n",
+    "    final_img = object.smoothen(bin_img)\n",
     "\n",
-    "for i in range(len(images)):\n",
-    "    viewer.add_image(images[i], name=titles[i])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "55 202 169.93820121593046\n",
-      "108.0 147.0 176.0\n",
-      "94.60598321780373 131.47368790838192 159.88508091935265\n"
-     ]
-    }
-   ],
-   "source": [
-    "min = np.min(img_gray_cp[idx_upper+1:idx_lower-1,:])\n",
-    "max = np.max(img_gray_cp[idx_upper+1:idx_lower-1,:])\n",
-    "avg = np.average(img_gray_cp[idx_upper+1:idx_lower-1,:])\n",
-    "print(min, max, avg)\n",
+    "    # save binarized image\n",
+    "    # object.save_img(final_img, 'binarized')\n",
+    "    \n",
+    "    # compute area of cropped and stained region\n",
+    "    # compute grayscale intensities normalized over stained region, cropped region, whole image\n",
+    "    area, intensity = object.calc_intensity(final_img, gray_img)\n",
     "\n",
-    "q_50 = np.quantile(img_gray_cp[idx_upper+1:idx_lower-1,:],0.50)\n",
-    "q_10 = np.quantile(img_gray_cp[idx_upper+1:idx_lower-1,:],0.10)\n",
-    "q_01 = np.quantile(img_gray_cp[idx_upper+1:idx_lower-1,:],0.01)\n",
-    "print(q_01, q_10, q_50)\n",
+    "    # insert values\n",
+    "    new_row = np.concatenate((intensity, area))\n",
+    "    df.loc[len(df)] = new_row\n",
     "\n",
-    "print(np.average(img_gray_cp[img_gray_cp <= q_01]),np.average(img_gray_cp[img_gray_cp <= q_10]),np.average(img_gray_cp[img_gray_cp <= q_50]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Image layer 'opened 10th-quantile thresh' at 0x29fa73f8ee0>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "th = np.average(img_gray_cp[img_gray_cp <= q_10]) - 2\n",
-    "_, threshc = cv.threshold(img_gray_cp,th,255,cv.THRESH_BINARY)\n",
+    "    # # visualize original and processed images with napari\n",
+    "    # viewer = napari.Viewer()\n",
+    "    # viewer.add_image(img, rgb=True, name='Original image')\n",
+    "    # viewer.add_image(gray_img, name='Grayscale image')\n",
+    "    # viewer.add_image(cropped_img, name='Cropped image')\n",
+    "    # viewer.add_image(bin_img, name='Binarized image')\n",
+    "    # viewer.add_image(final_img, name='Binarized image w/ smoothened boundaries')\n",
     "\n",
-    "kernel = cv.getStructuringElement(cv.MORPH_ELLIPSE,(4,4))\n",
-    "op_threshc = cv.morphologyEx(threshc, cv.MORPH_OPEN, kernel)\n",
-    "\n",
-    "viewer.add_image(threshc, name='10th-quantile thresh')\n",
-    "viewer.add_image(op_threshc, name='opened 10th-quantile thresh')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Grayscale intensity normalized over (what is assumed to be the) stained region: 115.10473198133866\n",
-      "Grayscale intensity normalized over cropped region: 4.4052625058302235\n",
-      "Grayscale intensity normalized over whole image: 1.5372530619303386\n"
-     ]
-    }
-   ],
-   "source": [
-    "copy = op_threshc.copy()\n",
-    "copy[copy == 0] = True\n",
-    "copy[copy == 255] = False\n",
-    "copy = copy.astype('bool')\n",
-    "\n",
-    "print(\"Grayscale intensity normalized over (what is assumed to be the) stained region: \" + str(np.sum(img_gray[copy])/np.sum(copy)))\n",
-    "print(\"Grayscale intensity normalized over cropped region: \" + str(np.sum(img_gray[copy])/((idx_lower-idx_upper)*y)))\n",
-    "print(\"Grayscale intensity normalized over whole image: \" + str(np.sum(img_gray[copy])/(x*y)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 122,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cv.imwrite(\"images/0004/grayscale.tif\", img_gray)\n",
-    "cv.imwrite(\"images/0004/cropped_grayscale.tif\", img_gray_cp)\n",
-    "cv.imwrite(\"images/0004/masking.tif\", threshc)\n",
-    "cv.imwrite(\"images/0004/cleaned_masking.tif\", op_threshc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# var  = img.astype('uint16')\n",
-    "\n",
-    "# [x, y, z] = var.shape \n",
-    "# for i in range(x):\n",
-    "#     sum_min = np.min(var[i,:,0]+var[i,:,1]+var[i,:,2])\n",
-    "#     sum_max = np.max(var[i,:,0]+var[i,:,1]+var[i,:,2])\n",
-    "#     diff_sum = sum_max - sum_min\n",
-    "#     print(np.max(var[i,:,0])-np.min(var[i,:,0]), np.max(var[i,:,1])-np.min(var[i,:,1]), np.max(var[i,:,2])-np.min(var[i,:,2]), sum_min, sum_max, diff_sum)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Image layer 'closing' at 0x28b8c87df60>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# # Adapative thresholding\n",
-    "# thm = cv.adaptiveThreshold(img_gray_cp,255,cv.ADAPTIVE_THRESH_MEAN_C,cv.THRESH_BINARY,31,2)\n",
-    "# thg = cv.adaptiveThreshold(img_gray_cp,255,cv.ADAPTIVE_THRESH_GAUSSIAN_C,cv.THRESH_BINARY,31,2)\n",
-    "\n",
-    "# kernel = cv.getStructuringElement(cv.MORPH_ELLIPSE,(4,4))\n",
-    "# closing = cv.morphologyEx(thm, cv.MORPH_CLOSE, kernel)\n",
-    "\n",
-    "# closing = cv.morphologyEx(thresh2, cv.MORPH_CLOSE, kernel)\n",
-    "# num,labels,stats,centroids = cv.connectedComponentsWithStats(closing,connectivity=8)\n",
-    "# for i in range(num):\n",
-    "#     print(np.sum(labels==i),stats[i][4])"
+    "# export to excel\n",
+    "df.to_excel(\"output.xlsx\")"
    ]
   }
  ],
