--- a/Image_analysis.ipynb
+++ b/Image_analysis.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "Arabidopsis seedlings are incubated with certain pharmaceuticals that attack the cell wall of the plants. This leads to increased production of lignin, a polymer that causes the seedlings to \"stiffen\" so that nothing can get through the cell wall anymore. For analysis, we use a specific dye that docks onto the individual lignin polymers, making them visible. And this is exactly where our interest lies. Using Fiji or ImageJ, we have to manually quantify the stained regions for every sample we analyse, sometimes several hundreds in number. Instead, we would like to have a tool that can be fed with all the images and quantifies the stained regions within seconds.\n",
     "\n",
-    "<img src=\"images/root0001.tif\" width=\"400\" height=\"200\">"
+    "<img src=\"images/root_images/root0001.png\" width=\"400\" height=\"200\">"
    ]
   },
   {
