removed napari from imports

--- a/Image_analysis.ipynb
+++ b/Image_analysis.ipynb
@@ -19,10 +19,10 @@
     "import numpy as np\n",
     "import cv2 as cv\n",
     "import matplotlib.pyplot as plt\n",
-    "import napari\n",
     "import os\n",
     "import pandas as pd\n",
-    "import xlsxwriter"
+    "import xlsxwriter\n",
+    "# import napari"
    ]
   },
   {
