Added comments and explanations

--- a/Image_analysis.ipynb
+++ b/Image_analysis.ipynb
@@ -11,6 +11,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, all required packages for running the notebook are installed. Lines starting with an \"#\" are comments and will not be executed when running the respective cell."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 96,
    "metadata": {},
@@ -23,6 +31,14 @@
     "import pandas as pd\n",
     "import xlsxwriter\n",
     "# import napari"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following cell contains definitions of all methods, which will be used for downstream analysis. You can find descriptions of the functionalities of the methods at the top of the method definitions."
    ]
   },
   {
@@ -39,19 +55,36 @@
     "    methods: read, to_gray, crop_img, calc_thresh, bin_img, smoothen, calc_intensity, save_img\n",
     "    '''\n",
     "    def __init__(self, file):\n",
+    "        '''\n",
+    "        Class initialization\n",
+    "        f: path to the file containing all images that are to be analysed, \n",
+    "        e.g., 'images/root_images/root0004.tif'\n",
+    "        '''\n",
     "        self.f = file\n",
     "    \n",
     "    def read(self):\n",
+    "        '''\n",
+    "        Method for reading images\n",
+    "        '''\n",
     "        # Read image\n",
     "        img = cv.imread(self.f)\n",
     "        return img\n",
     "    \n",
     "    def to_gray(self, img):\n",
+    "        '''\n",
+    "        Method for converting images to gray-scale\n",
+    "        img: image to be converted to gray-scale\n",
+    "        '''\n",
     "        # Convert image to grayscale\n",
     "        img_gray = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n",
     "        return img_gray\n",
     "    \n",
     "    def crop_img(self, img, n=255):\n",
+    "        '''\n",
+    "        Method for \"cropping\" images by setting the first and last 255 pixel rows to white\n",
+    "        img: image to be cropped\n",
+    "        n: number of top and bottom pixel rows to be cropped\n",
+    "        '''\n",
     "        # Create copy of image\n",
     "        img_cp = img.copy()\n",
     "        # Set first and last 255 rows to white\n",
@@ -60,6 +93,12 @@
     "        return img_cp\n",
     "    \n",
     "    def calc_thresh(self, img, n=255):\n",
+    "        '''\n",
+    "        Method for calculating the threshold that will be used to binarize images, \n",
+    "        i.e., separate foreground (in this case stained regions) from background\n",
+    "        img: image, for which the threshold is to be calculated\n",
+    "        n: number of top and bottom pixel rows that are ignored\n",
+    "        '''\n",
     "        # Calculate 10%-quantile\n",
     "        q_10 = np.quantile(img[n+1:-(n+1),:],0.10)\n",
     "        # Calculate threshold as mean pixel intensity over 10%-quantile\n",
@@ -68,17 +107,35 @@
     "        return th\n",
     "    \n",
     "    def bin_img(self, img, th):\n",
+    "        '''\n",
+    "        Method for binarizing images\n",
+    "        img: image to be binarized\n",
+    "        th: threshold\n",
+    "        '''\n",
     "        # Binarize image by means of thresholding\n",
     "        _, bin_img = cv.threshold(img,th,255,cv.THRESH_BINARY)\n",
     "        return bin_img\n",
     "    \n",
     "    def smoothen(self, img):\n",
+    "        '''\n",
+    "        Method for smoothening boundaries in binarized images\n",
+    "        img: binarized image\n",
+    "        '''\n",
     "        # Smoothen boundaries in binarised image by means of morphological opening\n",
     "        kernel = cv.getStructuringElement(cv.MORPH_ELLIPSE,(2,2))\n",
     "        sm_img = cv.morphologyEx(img, cv.MORPH_OPEN, kernel)\n",
     "        return sm_img\n",
     "    \n",
     "    def calc_intensity(self, bin_img, img, n=225):\n",
+    "        '''\n",
+    "        Method for calculating gray-scale intensities over\n",
+    "            1) stained region\n",
+    "            2) cropped region\n",
+    "            3) whole image\n",
+    "        bin_img: binarized image\n",
+    "        img: original image\n",
+    "        n: number of top and bottom pixel rows that are ignored\n",
+    "        '''\n",
     "        # Create copy of binarized image and convert to boolean\n",
     "        bool_img = bin_img.copy()\n",
     "        bool_img[bool_img == 0] = True\n",
@@ -107,9 +164,22 @@
     "        return np.array([area_cp, area_st]), np.array([int1, int2, int3])\n",
     "    \n",
     "    def save_img(self, img, name):\n",
+    "        '''\n",
+    "        Method for smoothening boundaries in binarized images\n",
+    "        img: image to be saved\n",
+    "        name: name suffix added to original file name\n",
+    "        '''\n",
     "        txt = self.f.split('.')\n",
     "        cv.imwrite(f\"{txt[0]}_{name}.tif\", img)\n",
     "    "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following cell runs the analysis for one specific image. The path to the image is specified as variable f, e.g., f = 'images/root_images/root0004.tif'. If you wish to save the processed image after a specific step, e.g., after gray-scale conversion or binarization, uncomment the corresponding line by removing the \"#\". After successful execution of the cell, an excel file will be stored, containing the gray-scale intensity over the stained region, the cropped region, the whole image, the area of the stained region and the area of the cropped region. Currently, the file will be saved as \"output.xlsx\". If you wish to change the name of the output file, just enter a different filename (but keeping the file extension .xlsx)."
    ]
   },
   {
@@ -144,6 +214,9 @@
     "\n",
     "# convert image to grayscale\n",
     "gray_img = object.to_gray(img)\n",
+    "\n",
+    "# save gray-scale image\n",
+    "# object.save_img(gray_img, 'gray')\n",
     "\n",
     "# crop image\n",
     "cropped_img = object.crop_img(gray_img)\n",
@@ -190,6 +263,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following cell iterates over all images contained in the specified directory."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -215,6 +296,8 @@
     "\n",
     "    # convert image to grayscale\n",
     "    gray_img = object.to_gray(img)\n",
+    "    # save gray-scale image\n",
+    "    # object.save_img(gray_img, 'gray')\n",
     "\n",
     "    # crop image\n",
     "    cropped_img = object.crop_img(gray_img)\n",
