Corrected order of output

--- a/Image_analysis.ipynb
+++ b/Image_analysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
     "        # print(f\"Grayscale intensity normalized over stained region: {int1}\")\n",
     "        # print(f\"Grayscale intensity normalized over cropped region: {int2}\")\n",
     "        # print(f\"Grayscale intensity normalized over whole image: {int3}\")\n",
-    "        return np.array([area_cp, area_st]), np.array([int1, int2, int3])\n",
+    "        return np.array([area_st, area_cp]), np.array([int1, int2, int3])\n",
     "    \n",
     "    def save_img(self, img, name):\n",
     "        '''\n",
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
