Changed order of cells, added comments

--- a/Image_analysis.ipynb
+++ b/Image_analysis.ipynb
@@ -15,12 +15,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This cell must be excuted!\n",
+    "\n",
     "First, all required packages for running the notebook are installed. Lines starting with an \"#\" are comments and will not be executed when running the respective cell."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,12 +40,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This cell must be excuted!\n",
+    "\n",
     "The following cell contains definitions of all methods, which will be used for downstream analysis. You can find descriptions of the functionalities of the methods at the top of the method definitions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,29 +183,90 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following cell runs the analysis for one specific image. The path to the image is specified as variable f, e.g., f = 'images/root_images/root0004.tif'. If you wish to save the processed image after a specific step, e.g., after gray-scale conversion or binarization, uncomment the corresponding line by removing the \"#\". After successful execution of the cell, an excel file will be stored, containing the gray-scale intensity over the stained region, the cropped region, the whole image, the area of the stained region and the area of the cropped region. Currently, the file will be saved as \"output.xlsx\". If you wish to change the name of the output file, just enter a different filename (but keeping the file extension .xlsx)."
+    "The following cell runs the analysis for all images in the specified directory. The path to the directory is specified under the variable \"directory\", e.g., directory = 'images/root_images'. If you wish to save the processed images after a specific step, e.g., after gray-scale conversion or binarization, uncomment the corresponding line by removing the \"#\". After successful execution of the cell, an excel file will be stored, containing the gray-scale intensities over the stained region, the cropped region, the whole image, the area of the stained region (in number of pixels) and the area of the cropped region. Currently, the file will be saved as \"output.xlsx\". If you wish to change the name of the output file, just enter a different filename (but keeping the file extension .xlsx)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Grayscale intensity normalized over stained region: 114.23573452043706\n",
-      "Grayscale intensity normalized over cropped region: 3.4674294909591197\n",
-      "Grayscale intensity normalized over whole image: 1.4357325236002605\n",
-      "   grayscale intensity stained region  grayscale intensity cropped region  \\\n",
-      "0                          114.235735                            3.467429   \n",
-      "\n",
-      "   grayscale whole image  area stained region  area cropped region  \n",
-      "0               1.435733             325632.0               9884.0  \n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# create dataframe\n",
+    "data = {'grayscale intensity stained region':[], 'grayscale intensity cropped region':[], 'grayscale whole image':[], 'area stained region':[], 'area cropped region':[]}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# assign directory\n",
+    "directory = 'images/root_images'\n",
+    " \n",
+    "# iterate over files in directory\n",
+    "for filename in os.listdir(directory):\n",
+    "    # path\n",
+    "    f = os.path.join(directory, filename)\n",
+    "\n",
+    "    # create instance for image analysis\n",
+    "    object = RootAnalysis(f)\n",
+    "\n",
+    "    # read image\n",
+    "    img = object.read()\n",
+    "\n",
+    "    # convert image to grayscale\n",
+    "    gray_img = object.to_gray(img)\n",
+    "    # save gray-scale image\n",
+    "    # object.save_img(gray_img, 'gray')\n",
+    "\n",
+    "    # crop image\n",
+    "    cropped_img = object.crop_img(gray_img)\n",
+    "    # save cropped image\n",
+    "    # object.save_img(cropped_img, 'cropped')\n",
+    "\n",
+    "    # calculate threshold\n",
+    "    th = object.calc_thresh(gray_img)\n",
+    "    # Define constant global threshold instead\n",
+    "    # th = 140\n",
+    "\n",
+    "    # binarize image\n",
+    "    bin_img = object.bin_img(cropped_img, th)\n",
+    "\n",
+    "    # smoothen boundaries in binarized image\n",
+    "    final_img = object.smoothen(bin_img)\n",
+    "\n",
+    "    # save binarized image\n",
+    "    # object.save_img(final_img, 'binarized')\n",
+    "    \n",
+    "    # compute area of cropped and stained region\n",
+    "    # compute grayscale intensities normalized over stained region, cropped region, whole image\n",
+    "    area, intensity = object.calc_intensity(final_img, gray_img)\n",
+    "\n",
+    "    # insert values\n",
+    "    new_row = np.concatenate((intensity, area))\n",
+    "    df.loc[len(df)] = new_row\n",
+    "\n",
+    "    # # visualize original and processed images with napari\n",
+    "    # viewer = napari.Viewer()\n",
+    "    # viewer.add_image(img, rgb=True, name='Original image')\n",
+    "    # viewer.add_image(gray_img, name='Grayscale image')\n",
+    "    # viewer.add_image(cropped_img, name='Cropped image')\n",
+    "    # viewer.add_image(bin_img, name='Binarized image')\n",
+    "    # viewer.add_image(final_img, name='Binarized image w/ smoothened boundaries')\n",
+    "\n",
+    "# export to excel\n",
+    "df.to_excel(\"output.xlsx\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following cell does exactly the same as the previous cell, except that only one specific image is analysed. The path to that specific image is saved under the variable f, e.g., f = 'images/root_images/root0004.tif'. This cell can be ignored if you do not wish to analyse one specific image only."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# path\n",
     "f = 'images/root_images/root0004.tif'\n",
@@ -260,83 +325,6 @@
     "# viewer.add_image(cropped_img, name='Cropped image')\n",
     "# viewer.add_image(bin_img, name='Binarized image')\n",
     "# viewer.add_image(final_img, name='Binarized image w/ smoothened boundaries')"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The following cell iterates over all images contained in the specified directory."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create dataframe\n",
-    "data = {'grayscale intensity stained region':[], 'grayscale intensity cropped region':[], 'grayscale whole image':[], 'area stained region':[], 'area cropped region':[]}\n",
-    "df = pd.DataFrame(data)\n",
-    "\n",
-    "# assign directory\n",
-    "directory = 'images/root_images'\n",
-    " \n",
-    "# iterate over files in directory\n",
-    "for filename in os.listdir(directory):\n",
-    "    # path\n",
-    "    f = os.path.join(directory, filename)\n",
-    "\n",
-    "    # create instance for image analysis\n",
-    "    object = RootAnalysis(f)\n",
-    "\n",
-    "    # read image\n",
-    "    img = object.read()\n",
-    "\n",
-    "    # convert image to grayscale\n",
-    "    gray_img = object.to_gray(img)\n",
-    "    # save gray-scale image\n",
-    "    # object.save_img(gray_img, 'gray')\n",
-    "\n",
-    "    # crop image\n",
-    "    cropped_img = object.crop_img(gray_img)\n",
-    "\n",
-    "    # save cropped image\n",
-    "    # object.save_img(cropped_img, 'cropped')\n",
-    "\n",
-    "    # calculate threshold\n",
-    "    th = object.calc_thresh(gray_img)\n",
-    "    # Define constant global threshold instead\n",
-    "    # th = 140\n",
-    "\n",
-    "    # binarize image\n",
-    "    bin_img = object.bin_img(cropped_img, th)\n",
-    "\n",
-    "    # smoothen boundaries in binarized image\n",
-    "    final_img = object.smoothen(bin_img)\n",
-    "\n",
-    "    # save binarized image\n",
-    "    # object.save_img(final_img, 'binarized')\n",
-    "    \n",
-    "    # compute area of cropped and stained region\n",
-    "    # compute grayscale intensities normalized over stained region, cropped region, whole image\n",
-    "    area, intensity = object.calc_intensity(final_img, gray_img)\n",
-    "\n",
-    "    # insert values\n",
-    "    new_row = np.concatenate((intensity, area))\n",
-    "    df.loc[len(df)] = new_row\n",
-    "\n",
-    "    # # visualize original and processed images with napari\n",
-    "    # viewer = napari.Viewer()\n",
-    "    # viewer.add_image(img, rgb=True, name='Original image')\n",
-    "    # viewer.add_image(gray_img, name='Grayscale image')\n",
-    "    # viewer.add_image(cropped_img, name='Cropped image')\n",
-    "    # viewer.add_image(bin_img, name='Binarized image')\n",
-    "    # viewer.add_image(final_img, name='Binarized image w/ smoothened boundaries')\n",
-    "\n",
-    "# export to excel\n",
-    "df.to_excel(\"output.xlsx\")"
    ]
   }
  ],
