threshold Berechnung verfeinert für Randfälle

--- a/Image_analysis.ipynb
+++ b/Image_analysis.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,6 +108,14 @@
     "        # Calculate threshold as mean pixel intensity over 10%-quantile\n",
     "        # Adjust by some constant, e.g., c=2\n",
     "        th = np.average(img[img <= q_10]) - 2\n",
+    "        # If the threshold is larger than 145, there probably is a very low amount of Lignin.\n",
+    "        # In this case, set the threshold to 145 to ensure comparability between images.\n",
+    "        if th > 150:\n",
+    "            th = 145\n",
+    "        # If the threshold is lower than 125, there probably is a very high amount of Lignin.\n",
+    "        # In this case, set the threshold to 125 to ensure comparability between images.\n",
+    "        elif th < 125:\n",
+    "            th = 125\n",
     "        return th\n",
     "    \n",
     "    def bin_img(self, img, th):\n",
@@ -188,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
