Save binarized images in images/root_images_bin

--- a/Image_analysis.ipynb
+++ b/Image_analysis.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,8 +181,11 @@
     "        img: image to be saved\n",
     "        name: name suffix added to original file name\n",
     "        '''\n",
-    "        txt = self.f.split('.')\n",
-    "        cv.imwrite(f\"{txt[0]}_{name}.tif\", img)\n",
+    "        txt1 = self.f.split('.')\n",
+    "        txt1 = f\"{txt1[0]}_{name}.tif\"\n",
+    "        txt2 = txt1.split('\\\\')\n",
+    "        txt2 = f\"{txt2[0]}_{name}\\{txt2[1]}\"\n",
+    "        cv.imwrite(txt2, img)\n",
     "    "
    ]
   },
@@ -196,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,13 +223,9 @@
     "\n",
     "    # convert image to grayscale\n",
     "    gray_img = object.to_gray(img)\n",
-    "    # save gray-scale image\n",
-    "    # object.save_img(gray_img, 'gray')\n",
     "\n",
     "    # crop image\n",
     "    cropped_img = object.crop_img(gray_img)\n",
-    "    # save cropped image\n",
-    "    # object.save_img(cropped_img, 'cropped')\n",
     "\n",
     "    # calculate threshold\n",
     "    th = object.calc_thresh(gray_img)\n",
@@ -240,7 +239,7 @@
     "    final_img = object.smoothen(bin_img)\n",
     "\n",
     "    # save binarized image\n",
-    "    # object.save_img(final_img, 'binarized')\n",
+    "    object.save_img(final_img, 'bin')\n",
     "    \n",
     "    # compute area of cropped and stained region\n",
     "    # compute grayscale intensities normalized over stained region, cropped region, whole image\n",
@@ -272,12 +271,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# assign directory\n",
+    "directory = 'images/root_images'\n",
+    "\n",
     "# path\n",
-    "f = 'images/root_images/root0004.tif'\n",
+    "f = os.path.join(directory, 'root0004.tif')\n",
     "\n",
     "# create instance for image analysis\n",
     "object = RootAnalysis(f)\n",
@@ -288,14 +290,8 @@
     "# convert image to grayscale\n",
     "gray_img = object.to_gray(img)\n",
     "\n",
-    "# save gray-scale image\n",
-    "# object.save_img(gray_img, 'gray')\n",
-    "\n",
     "# crop image\n",
     "cropped_img = object.crop_img(gray_img)\n",
-    "\n",
-    "# save cropped image\n",
-    "# object.save_img(cropped_img, 'cropped')\n",
     "\n",
     "# calculate threshold\n",
     "th = object.calc_thresh(gray_img)\n",
@@ -308,8 +304,8 @@
     "# smoothen boundaries in binarized image\n",
     "final_img = object.smoothen(bin_img)\n",
     "\n",
-    "# # save binarized image\n",
-    "# object.save_img(final_img, 'binarized')\n",
+    "# save binarized image\n",
+    "object.save_img(final_img, 'bin')\n",
     "\n",
     "# compute area of cropped and stained region\n",
     "# compute grayscale intensities normalized over stained region, cropped region, whole image\n",
@@ -324,7 +320,7 @@
     "df.loc[len(df)] = new_row\n",
     "\n",
     "# export to excel\n",
-    "df.to_excel(\"output.xlsx\") \n",
+    "# df.to_excel(\"output.xlsx\") \n",
     "\n",
     "# # visualize original and processed images with napari\n",
     "# viewer = napari.Viewer()\n",
