Ignore all non-tif images in /images/root_images

--- a/Image_analysis.ipynb
+++ b/Image_analysis.ipynb
@@ -215,6 +215,9 @@
     "    # path\n",
     "    f = os.path.join(directory, filename)\n",
     "\n",
+    "    if f.split('.')[1] != 'tif':\n",
+    "        continue\n",
+    "\n",
     "    # create instance for image analysis\n",
     "    object = RootAnalysis(f)\n",
     "\n",
